Vertically center video modal and fix z-index issue

--- a/css/components/_header.scss
+++ b/css/components/_header.scss
@@ -7,7 +7,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 99999;
+  z-index: 100;
   background-color: white;
   @media (min-width: 992px) {
     margin-bottom: 1em;
@@ -184,7 +184,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 9999;
+  z-index: 101;
   overflow-y: auto;
   height: 100%;
   left: -100%;
@@ -309,7 +309,7 @@
   left: 0;
   width: 100%;
   background: white;
-  z-index: 9999;
+  z-index: 100;
   &__top {
     padding: 1rem 0;
     @media (min-width: 992px) {
